--- a/src/stylesheets/nav.scss
+++ b/src/stylesheets/nav.scss
@@ -2,8 +2,69 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-
   padding: 16px;
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    padding: 10px 0 10px 0;
+    position: absolute;
+    width: 250px;
+    height: 329px;
+    right: 15px;
+    top: 70px;
+    background: $white;
+    border: 1px solid $grey-3;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 8px rgba(51, 51, 51, 0.24);
+    border-radius: 8px;
+    cursor: pointer;
+    &__item {
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      padding: 0 15px 0 15px;
+      height: 40px;
+
+      &__company {
+        display: flex;
+        flex-direction: column;
+        &--wrapper {
+          div {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 15px 0 15px;
+            height: 40px;
+            &:hover {
+              background-color: $grey-1;
+            }
+            span {
+              display: flex;
+            }
+            i {
+              display: flex;
+            }
+          }
+        }
+      }
+
+      &--company-divider {
+        color: $grey-6;
+      }
+      &--border {
+        border: 1px solid #dcdce0;
+        height: 0;
+        width: 100%;
+      }
+      &--icon {
+        font-size: 16px;
+        margin-right: 5px;
+      }
+    }
+  }
 }
 
 .nav__link {
@@ -18,7 +79,8 @@
 
   transition: 100ms background-color;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     background-color: $grey-2;
   }
 
@@ -41,4 +103,8 @@
 
 .nav__link-icon {
   margin-left: 8px;
+}
+
+.color-red {
+  color: $red;
 }
